automatically merged revision 1089663: fix access keys not being de-activable when a form element has input focus.

BUG: 210029

svn path=/branches/KDE/4.4/kdelibs/; revision=1093040